# LongVideoEvalKit

./: .gitignore  DEVELOPMENT_ROADMAP.md  MODEL_CACHE_SETUP.md  README.md  introduction.md  metrics_list.md  pyproject.toml  run_eval_all_metrics.sh  介绍.md
configs/: eval_v0_1.yaml
longvideo_eval/: __init__.py  cli.py  config.py  model_defaults.py  paired_runner.py  pipeline.py  schema.py
longvideo_eval/io/: prompt_loader.py  runtime_loader.py  video_clipper.py  video_reader.py
longvideo_eval/metrics/: efficiency.py  long_consistency.py  paper_metrics.py  quality_proxy.py  vbench_wrapper.py
longvideo_eval/models/: features.py
longvideo_eval/report/: writer.py
paired_videos_metrics/: METRICS_GUIDE_ZH.md  README.md  __init__.py  batch_eval_paired_videos.py  calculate_lpips.py  demo.py
paired_videos_metrics/lpips/: __init__.py
scripts/: make_toy_data.py
tests/: test_paired_cli.py  test_paper_metrics.py  test_smoke.py  test_vbench.py
